[gd_scene load_steps=9 format=3 uid="uid://c5xvtqho65kvv"]

[ext_resource type="Script" path="res://scripts/ability_disabler_mystery.gd" id="1_jjf4i"]
[ext_resource type="Texture2D" uid="uid://ogotiy2xoypc" path="res://assets/sprites/other/spr_ability_disabler.png" id="2_bwf8g"]
[ext_resource type="AudioStream" uid="uid://doosfg54tkmam" path="res://assets/sfx/snd_ability_disabler.wav" id="2_vigo7"]
[ext_resource type="Texture2D" uid="uid://mpmuf6hcpjbj" path="res://assets/sprites/other/spr_ability_disabler_particles.png" id="3_e5o4d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_871w2"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_5cg5i"]
length = 0.001

[sub_resource type="Animation" id="Animation_e108g"]
resource_name = "default"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Particles:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6twrw"]
_data = {
"RESET": SubResource("Animation_5cg5i"),
"default": SubResource("Animation_e108g")
}

[node name="AbilityDisablerMystery" type="Area2D"]
top_level = true
z_index = 3
collision_layer = 0
collision_mask = 2
script = ExtResource("1_jjf4i")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(0, 1, 1, 0.243137)
texture = ExtResource("2_bwf8g")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Particles" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("3_e5o4d")
hframes = 9
region_enabled = true
region_rect = Rect2(0, 0, 144, 16)

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_871w2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6twrw")
}
autoplay = "default"

[node name="TriggerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vigo7")
volume_db = 3.0
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
